--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html> 
+<html lang= "pt-br"> 
+<head> 
+  <title> Vinheta Trechos De Códigos  </title>
+  <meta charset="UTF-8"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <link rel="stylesheet" href="style.css"/>
 
+  </head>
+<body>
+    <h2>Trechos De Códigos ... </h2>
+
+
+ 
+ </body> 
+ </html>
