--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   </head>
 <body>
-    <h2 data-text="MQJogos...">Expectativa ... </h2>
+    <h2 data-text="Expectativa ... ">Expectativa ... </h2>
 
 
  
