--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   </head>
 <body>
-    <h2 data-text="Curta ... ">Curta ... </h2>
+    <h2 data-text="Compartilhe ... ">Compartilhe ... </h2>
 
 
  
